<resources>
    <string name="app_name">Construyendo Pacifico</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="buttoncamera">buttonCamera</string>
    <string name="coordenadas_geogr_ficas">Coordenadas Geográficas :</string>
    <string name="longitud">Longitud</string>
    <string name="altitud">Altitud</string>
    <string name="latitud">Latitud</string>
    <string name="regresar">Regresar</string>
    <string name="ubicaci_n">Ubicación</string>
    <string name="department">Departamento</string>
    <string name="municipio">Municipio</string>
    <string name="populated_center">Centros Poblados</string>
    <string name="vereda">Centros Poblados</string>
    <string name="demograf_a">Demografía</string>
    <string name="seleccionar_municipio">Seleccionar Municipio</string>
    <string name="seleccionar_vereda">Seleccionar Vereda</string>
    <string name="superficiales">Superficiales</string>
    <string name="tipo_poblaci_n">Tipo Población</string>
    <string name="seleccionar">Seleccionar</string>
    <string name="grupo_etnico">Grupo Etnico</string>
    <string name="construyendo_pac_fico">Construyendo Pacífico</string>
    <string name="n_mero_de_habitantes">Número de habitantes</string>
    <string name="surface_sources">Fuentes Superficiales</string>
    <string name="underground_sources">Fuentes Subterraneas</string>
    <string name="abastecimiento_dle_lugar">Abastecimiento del lugar</string>
    <string name="subterraneas">Subterraneas</string>
    <string name="tipo_de_captaci_n">Tipo de Captación</string>
    <string name="guardar">Guardar</string>
    <string name="habitantes">Habitantes</string>
    <string name="actualizar">Actualizar</string>
    <string name="bienvenido_de_nuevo">Bienvenido de nuevo</string>
    <string name="sr">Sr.</string>
    <string name="fotousuario">FotoUsuario</string>
    <string name="exittoapp">ExitToApp</string>
    <string name="lorem">Lorem</string>
    <string name="registrar">Registrar Zona</string>
    <string name="deletezone">DeleteZone</string>
    <string name="editzone">EditZone</string>
    <string name="nextactionzone">NextActionZone</string>
    <string name="center">Centro de Teleinformatica y Produccion Industrial </string>
    <string name="titulo_1">Creando para Crecer</string>
    <string name="titulo_2">Con tu ayuda hacemos un gran cambio</string>
    <string name="factory">Fabrica de Software</string>
    <string name="usuario">Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="boton_1">INICIAR SESION</string>
    <string name="sena_1">SENA comunica </string>
    <string name="sena_2">www.sena.edu.co</string>
    <string name="boton_2">Regresar</string>
    <string name="energ_a_alternativa">Energía Alternativa</string>
    <string name="saneamiento">Saneamiento</string>
    <string name="fuente_de_agua_y_potabilidad">Fuente de Agua y Potabilidad</string>
    <string name="arquitectura_de_construcci_n_del_pac_fico">Arquitectura de Construcción del Pacífico</string>
    <string name="abastecimiento_del_lugar">Abastecimiento del Lugar</string>
    <string name="tipo_de_decantaci_n">Tipo de Decantación</string>
    <string name="analyzeParameters">Parametros a Analizar</string>
    <string name="addSample">Agregar Muestra</string>
    <string name="typeSample">Tipo de muestra :</string>
    <string name="naturalWater">Agua Natural</string>
    <string name="treatedWater">Agua Tratada</string>
    <string name="residualWater">Agua Residual</string>
    <string name="other">Otro</string>
    <string name="sample1"># 1</string>
    <string name="sample2"># 2</string>
    <string name="sample3"># 3</string>
    <string name="sample4"># 4</string>
    <string name="sample5"># 5</string>
    <string name="average">Promedio</string>
    <string name="limit">Limite</string>
    <string name="feature">Caracteristica</string>
    <string name="samples">Muestras</string>
    <string name="selectSample">Selecciona un parametro para añadir muestra : </string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="saveAnalysis">Guardar Analisis</string>
    <string name="noAnalysis">No se puede comenzar a tomar muestras sin guardar previamente un analisis</string>
    <string name="noSamples">No hay muestras registradas</string>
    <string name="observationp1">1. Observe el tipo de vivienda:</string>
    <string name="House">Casa</string>
    <string name="room">Habitacion</string>
    <string name="apartament">Apartamento</string>
    <string name="witch">¿Cuál?</string>
    <string name="observationp2">2. Indique si la vivienda cuenta con los siguientes espacios: (Si o No)</string>
    <string name="room_for_sleep">a.Habitaciones para dormir</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="sala">b.Sala</string>
    <string name="comedor">c.Comedor</string>
    <string name="sala_comedor">d.Sala-comedor</string>
    <string name="cocina">e.Cocina</string>
    <string name="ba_os">f.Baños</string>
    <string name="almacenaje_npara_herramientas">g.Almacenaje \npara herramientas</string>
    <string name="almacenaje_de_agro_ninsumos_y_fertilizantes">h.Almacenaje de agro \ninsumos y fertilizantes</string>
    <string name="estos_espacios_est_n_ncerrados_bajo_llave">¿Estos espacios están \ncerrados bajo llave?</string>
    <string name="patio">i.Patio</string>
    <string name="azotea">j.Azotea (Huerta Trasera)</string>
    <string name="anden_espacio_privado_nfrente_a_la_calle">k.Anden (Espacio privado \nfrente a la calle</string>
    <string name="soberado">l.Soberado (Espacio entre \nla cubierta y el cielorraso</string>
    <string name="pregunta_complemento_de_g_y_h">Pregunta complemento de G y H:</string>
    <string name="observationp3">12. El patio es usado para:</string>
    <string name="observationp7">13. El tipo de baño que se utiliza en la vivienda es:</string>
    <string name="observationp4">3. Los espacios para dormir son divididos con:</string>
    <string name="observationp5">4. La cocina se encuentra:</string>
    <string name="observationp6">5. El baño se encuentra:</string>
    <string name="observationp8">6. La vivienda cuenta con:</string>
    <string name="observationp9">7. El piso de la vivienda es:</string>
    <string name="observationp10">8. El techo de la vivienda es:</string>
    <string name="observationp11">9. Qué tipo de material poseen las paredes exteriores de la vivienda:</string>
    <string name="observationp12">10. Qué tipo de acabado tienen las fachadas de la vivienda:</string>
    <string name="observationp13">11. Las viviendas se organizan en:</string>
    <string name="observationp14">12. Accesibilidad /Vías terrestres:</string>
    <string name="observationp15">13. Hace cuanto tiempo (años) reside en la vivienda</string>
    <string name="observationp16">14. Tipo de tendencia de la vivienda:</string>
    <string name="observationp17">15. La Vivienda se encuentra en espacios de alto riesgo</string>
    <string name="observationp18">16. Notas para Observaciones</string>
    <string name="observation_form">Instrumento de Observacion sobre caracterización del perfil sociocultural de las comunidades Negras de la zona rural del litoral pacífico</string>
    <string name="observaci_n">Observación</string>
    <string name="caracterizaci_n">Caracterización</string>
    <string name="architecture">Arquitectura de construccion del pacífico</string>
    <string name="question1D">1. Cuántas familias comparten la vivienda:</string>
    <string name="question2D">2. Número de personas que habitan la vivienda:</string>
    <string name="question3D">3. Número de niños de 0 a 14 años en la vivienda:</string>
    <string name="question4D">4. Número de jóvenes de 14 a 18 años en la vivienda:</string>
    <string name="question5D">5. Número de adultos, mayores de 18 años en la vivienda:</string>
    <string name="question6D">6. Número de adultos mayores (de 65 años en adelante)</string>
    <string name="question7D">7. Cuantas habitaciones tienen:</string>
    <string name="question8D">8. Cuantas personas duermen por habitación:</string>
    <string name="questions9D">9. La vocación productiva de la familia es:</string>
    <string name="question10D">10. Las fuentes de financiación para la adquisición/Construccion de la vivienda proviene principalmente de :</string>
    <string name="question11D">11. ¿Cuál es el nivel educativo más alto alcanzado en la familia?</string>
    <string name="question15D">14. A qué tipo de riesgo esta propensa la vivienda</string>
    <string name="carac">Caracterización</string>
    <string name="Coordenadas">Coordenadas de la ubicación de la vivienda</string>
    <string name="namerespon">Nombre del encuestado</string>
    <string name="femenino">Femenino</string>
    <string name="masculino">Masculino</string>
    <string name="question12D">12. Hace cuanto tiempo (años) reside en la vivienda</string>
    <string name="question13D">13. Tipo de tendencia de la vivienda:</string>
    <string name="question14D">14. La Vivienda se encuentra en espacios de alto riesgo</string>
    <string name="question16D">15. La vivienda donde vive es:</string>
    <string name="question17D">16. Prioritariamente cual miembro de la familia hace la gestión de Adquirir (A),Mantener (M) y Desarrollar (D) la vivienda</string>
    <string name="titulo_preguntas18">DIMENSIÓN FISICA DE LA VIVIENDA</string>
    <string name="pregunta18">18. Si la vivienda es de madera, diga si necesitan tiempos especiales para el corte del material:</string>
    <string name="preguntas19_moduloCharacterize">19. Indique que tipo de madera(s) se utilizo para su construccion (por ejemplo, cedro).</string>
    <string name="guayacan19">Guayacan</string>
    <string name="genen19">Genené</string>
    <string name="mangle19">Mangle</string>
    <string name="amargo19">Amargo</string>
    <string name="machere19">Machere</string>
    <string name="tangare19">Tangare</string>
    <string name="aceite_maria19">Aceite María</string>
    <string name="comino19">Comino</string>
    <string name="peine_mono19">Peine mono</string>
    <string name="jigua_negro19">Jigua Negro</string>
    <string name="quinde19">Quinde</string>
    <string name="nalde19">Nalde</string>
    <string name="guabo19">Guabo</string>
    <string name="guadua19">Guadua</string>
    <string name="sajo19">Sajo</string>
    <string name="guait19">Guaité</string>
    <string name="chonta19">Chonta</string>
    <string name="palo_mulato19">Palo mulato</string>
    <string name="querre19">Querre</string>
    <string name="chachajo19">Chachajo</string>
    <string name="chachajillo19">Chachajillo</string>
    <string name="pregunta20">20. Indique las dimensiones de la vivienda, si las conoce:</string>
    <string name="pregutna22">21. Indique las dimensiones del lote o terreno(incluida la vivienda y parte productiva), si las conoce:</string>
    <string name="preguinta22">22. ¿La propieda o lo te cuenta con terreno para cultivar o criar animales?</string>
    <string name="gallinas23">Gallinas</string>
    <string name="conejos23">Conejos</string>
    <string name="patos23">Patos</string>
    <string name="pavos23">Pavos</string>
    <string name="codornices23">Codornices</string>
    <string name="peces23">Peces</string>
    <string name="escriba_aqui_si_texto24">Escriba aqui......</string>
    <string name="plantas24">24. ¿Que tipo de plantas cultivan?</string>
    <string name="preginta27">27. ¿La vivienda ha sido acondicionada para personas con discapacidad?</string>
    <string name="preginta25">25. ¿Hay personas con dicapacidad en la vivienda?</string>
    <string name="preguinta26">26. Que tipo de incapacidad</string>
    <string name="auditiva26">Auditiva</string>
    <string name="nombre_del_sitio">nombre del sitio</string>
    <string name="sitio">sitio</string>
</resources>