<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.modules.architecture.ArchitectureMenuFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:padding="@dimen/marginGlobal">

        <ImageButton
            android:id="@+id/btn_back_to_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/blueDarkSena"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:layout_constraintStart_toStartOf="@+id/idText"
            app:layout_constraintTop_toBottomOf="@+id/idText"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/idText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/architecture"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/orangeSena"
            android:textSize="@dimen/titles"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="8dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/idImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="@dimen/marginTopGlobal"
            android:elevation="@dimen/marginTopGlobal"
            app:cardCornerRadius="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idText">

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                android:backgroundTint="@color/transparent"
                android:scaleType="centerCrop"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/home" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/linearLayout8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:foregroundGravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idImage">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvObservation"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_weight="1"
                android:alpha=".7"
                android:elevation="10dp"
                android:outlineSpotShadowColor="@color/blueSena"
                app:cardCornerRadius="@dimen/cornerRadiusGlobalCard">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    >


                    <LinearLayout
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_gravity="center">

                        <com.airbnb.lottie.LottieAnimationView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:lottie_autoPlay="true"
                            app:lottie_loop="true"
                            app:lottie_rawRes="@raw/observation" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/marginTopGlobal"
                        android:text="@string/observaci_n"
                        android:textAlignment="center"
                        android:textColor="@color/blueSena"
                        android:textSize="@dimen/subTitles"
                        android:textStyle="bold"
                        />

                    <LinearLayout
                        android:id="@+id/lLObservation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/marginTopGlobal"
                        android:layout_marginBottom="10dp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:visibility="gone">

                        <ImageView
                            android:id="@+id/ivDownloadObservation"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_weight="1"
                            android:contentDescription="@string/deletezone"
                            android:src="@drawable/ic_baseline_download_24"
                            app:tint="@color/blueDarkSena" />

                        <ImageView
                            android:id="@+id/ivEditObservation"
                            android:layout_width="10dp"
                            android:layout_height="30dp"
                            android:layout_weight="1"
                            android:contentDescription="@string/editzone"
                            android:src="@drawable/ic_edit" />

                        <ImageView
                            android:id="@+id/ivSeeObservation"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_weight="1"
                            android:contentDescription="@string/nextactionzone"
                            android:src="@drawable/ic_baseline_remove_red_eye_24"
                            app:tint="@color/blueDarkSena" />
                    </LinearLayout>


                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout8">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvCharacterization"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_weight="1"
                android:alpha=".7"
                android:elevation="10dp"
                android:outlineSpotShadowColor="@color/blueSena"
                app:cardCornerRadius="@dimen/cornerRadiusGlobalCard">

                <LinearLayout
                    android:id="@+id/IdCarWater"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical"
                    >

                    <LinearLayout
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_gravity="center">

                        <com.airbnb.lottie.LottieAnimationView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:lottie_autoPlay="true"
                            app:lottie_loop="true"
                            app:lottie_rawRes="@raw/characterization" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/marginTopGlobal"
                        android:text="@string/caracterizaci_n"
                        android:textAlignment="center"
                        android:textColor="@color/blueSena"
                        android:textSize="@dimen/subTitles"
                        android:textStyle="bold"
                        />

                    <LinearLayout
                        android:id="@+id/lLCharacterization"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/marginTopGlobal"
                        android:layout_marginBottom="10dp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:visibility="gone">

                        <ImageView
                            android:id="@+id/ivDownloadCharacterization"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_weight="1"
                            android:contentDescription="@string/deletezone"
                            android:src="@drawable/ic_baseline_download_24"
                            app:tint="@color/blueDarkSena" />

                        <ImageView
                            android:id="@+id/ivEditCharacterization"
                            android:layout_width="10dp"
                            android:layout_height="30dp"
                            android:layout_weight="1"
                            android:contentDescription="@string/editzone"
                            android:src="@drawable/ic_edit" />

                        <ImageView
                            android:id="@+id/ivSeeCharacterization"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_weight="1"
                            android:contentDescription="@string/nextactionzone"
                            android:src="@drawable/ic_baseline_remove_red_eye_24"
                            app:tint="@color/blueDarkSena" />
                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>